--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cookie": "^1.0.2",
     "document-form": "file:",
     "jsonwebtoken": "^9.0.2",
-    "next": "15.1.7",
+    "next": "^15.3.2",
     "next-auth": "^4.24.11",
     "nookies": "^2.5.2",
     "pg": "^8.13.3",
